# olmo-cookbook

./: .gitignore  FILTER_FEATURE_DOCS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  WEB_CASCADE_TOKENIZE.md  baseline_1B_sampler_data.json  baseline_7B_sampler_data.json  baseline_results.csv  baseline_results_clean copy.csv  baseline_results_clean.csv  baseline_sampler_data.json  batch_size_optimizer.py  config  convert.sh  copy_to_weka.sh  debug_ppl_eval.sh  decon-10b-eval.sh  decon-compare-eval.sh  decon_evals.csv  decon_results_dirty.csv  eval.sh  eval_1b_checkpoints.sh  eval_commands.py  eval_commands_consice.py  eval_sft_models.sh  eval_trained_models.sh  evalall.sh  example_filter.txt  ianm-clean-fim-fix-10B.sh  ianm-decon-fim-fix-10B.sh  ianm-decon-high-presision-olmo3.sh  ianm-suffix-train-icl-overlap-max-len-var-downstream.jsonl  input_file_redux  input_file_redux_multi_s5cmd_commands.sh  input_instr_s5cmd_commands.sh  jakecommands.sh  log.txt  logs.txt  midtraining_eval.sh  (+28 more)
configs/: gcs-web-reasoning-microanneal.yaml  olmo-cookbook-1b-5xC-2shards-dedup-alex-yolo-bin7_f0.4-t60-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-alex-yolo-bin7_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-alex-yolo-bin7_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-alex-yolo-bin_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-alex-yolo-bin_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-alex-yolo-five_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-alex-yolo-five_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-dclm_baseline_f0.4-t40-b4-r0.322.yaml  olmo-cookbook-1b-5xC-2shards-dedup-dclm_baseline_f0.4-t60-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-dclm_baseline_f0.4-t60-b4-r0.255.yaml  olmo-cookbook-1b-5xC-2shards-dedup-dclm_baseline_f0.4-t60-b4-r0.303.yaml  olmo-cookbook-1b-5xC-2shards-dedup-dclm_baseline_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-dclm_baseline_f0.4-t60-b4-r0.368.yaml  olmo-cookbook-1b-5xC-2shards-dedup-dclm_baseline_f0.4-t60-b4-r0.437.yaml  olmo-cookbook-1b-5xC-2shards-dedup-dclm_baseline_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-dclm_baseline_f0.4-t80-b4-r0.464.yaml  olmo-cookbook-1b-5xC-2shards-dedup-fineweb-edu-fasttext-5way_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-fineweb-edu-fasttext-5way_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-fineweb-edu-fasttext-gt2_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-fineweb-edu-fasttext-gt2_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-luca_fineweb2_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-luca_fineweb2_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-oh-uc-wc-eli5-edu2_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-oh-uc-wc-eli5-edu2_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-oh-uc-wc-eli5_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-oh-uc-wc-eli5_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-weborganizer_dclm_edu_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-weborganizer_dclm_edu_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-weborganizer_dclm_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-weborganizer_dclm_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-weborganizer_dclm_regmix_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-weborganizer_dclm_regmix_f0.4-t60-b6-r0.474.yaml  olmo-cookbook-1b-5xC-2shards-dedup-weborganizer_dclm_regmix_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-2shards-dedup-weborganizer_edu_regmix_f0.4-t60-b4-r0.329.yaml  olmo-cookbook-1b-5xC-2shards-dedup-weborganizer_edu_regmix_f0.4-t80-b1-r1.0.yaml  olmo-cookbook-1b-5xC-5shards-dclm_baseline.yaml  olmo-cookbook-1b-5xC-5shards-dedup-dclm_baseline.yaml  olmo-cookbook-1b-5xC-5shards-dedup-subsample.yaml  olmo-cookbook-1b-5xC-template.yaml  (+2 more)
docs/: README.md  how-to-tokenize.md
mix_lists/: bad_paths  faeze-8-13  faeze-reformatted  falcon-3B  falcon-3b-suffix  fixed-verifiable  input_file_no_sub_dir  input_file_redux_multi  input_high  input_high copy  input_instr  input_low  input_low_anr  input_low_mega  input_low_python  input_low_r1  instr-new  kyle-thing  round5-non-web-non-pdf-sparkle  round5-web-sparkle  round5plus-non-natureal-misc-sparkle  round5plus-stragglers  rui  sparkle-motion  swallow  swallowmath2  swallowmath2-fix  verifiable-o4-mini
pretrain_configs/: olmo2_1B_v2_baseline_dolma2-full-icl-overlap-50-50-baseline-2048-max-suffix-eos-fix.yaml  olmo2_1B_v2_baseline_dolma2-full-uncompressed-simulated-random-uniform.yaml  olmo2_1B_v2_baseline_dolma2-full.yaml  olmo_30m_baseline_dolma2-100b-icl-overlap-50-50-baseline-2048-max-suffix-eos-fix-eos-sep.yaml  olmo_30m_baseline_dolma2-100b-icl-overlap-50-50-baseline-2048-max-suffix-eos-fix.yaml  olmo_30m_baseline_dolma2-100b-icl-overlap-suffix-50-50-baseline-256-max-suffix.yaml  olmo_30m_baseline_dolma2-100b-no-max-tokens-suffix-icl-overlap-suffix-50-50-baseline-256-max-suffix.yaml  olmo_30m_baseline_dolma2-100b-no-max-tokens-suffix-icl-overlap-suffix-50-50-baseline-256-max-suffix_old.yaml  olmo_30m_baseline_dolma2-100b-rnd-cat-baseline-suffix-50-50-baseline-2048-max-suffix.yaml  olmo_30m_baseline_dolma2-100b-rnd-cat-baseline-suffix-50-50-baseline-256-max-suffix.yaml  olmo_30m_baseline_dolma2-100b-shuffled-FSL-256-window-backwards.yaml  olmo_30m_baseline_dolma2-100b-shuffled-FSL-256-window.yaml  olmo_30m_baseline_dolma2-full-12p-less-tokens-with-evals.yaml  olmo_30m_baseline_dolma2-full-3xC-with-evals.yaml  (+25 more)
(+2092 files in other folders)
